--- a/qr-code-component/index.html
+++ b/qr-code-component/index.html
@@ -11,7 +11,7 @@
     <p>Improve your front-end skills by building projects Scan the QR code to visit</p>
     <p>Frontend Mentor and take your coding skills to the next level</p>
     <div class="attribution"> 
-      <p>Challenge by</p><a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor. </a><a href="https://www.github.com/maxelonej" target="_blank">Coded by maxelonej</a>
+      <p class="attribution__by">Challenge by </p><a class="attribution__by" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor. </a><a href="https://www.github.com/maxelonej" target="_blank">Coded by maxelonej</a>
     </div>
   </body>
 </html>
