--- a/qr-code-component/index.html
+++ b/qr-code-component/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body> 
-    <p>Improve your front-end skills by building projects Scan the QR code to visit</p>
-    <p>Frontend Mentor and take your coding skills to the next level</p>
-    <div class="attribution"> 
-      <p class="attribution__by">Challenge by </p><a class="attribution__by" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor. </a><a href="https://www.github.com/maxelonej" target="_blank">Coded by maxelonej</a>
+    <div class="content"> <img class="content__qr" src="/qr-code-component/images/image-qr-code.png" alt="FrontendMentor QR code">
+      <div class="content__description">
+        <h3 class="content__description__header">Improve your front-end skills by building projects</h3>
+        <p class="content__description__text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      </div>
     </div>
   </body>
 </html>
