Add font by link href google fonts

--- a/qr-code-component/index.html
+++ b/qr-code-component/index.html
@@ -6,6 +6,7 @@
     <title>Frontend Mentor | QR code component</title>
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&amp;display=swap">
   </head>
   <body> 
     <div class="content"> <img class="content__qr" src="/qr-code-component/images/image-qr-code.png" alt="FrontendMentor QR code">
