--- a/frontendmentor/qr-code-component/index.html
+++ b/frontendmentor/qr-code-component/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&amp;display=swap">
   </head>
   <body> 
-    <div class="content"> <img class="content__qr" src="images/image-qr-code.png" alt="FrontendMentor QR code">
-      <div class="content__description">
-        <h3 class="content__description__header">Improve your front-end skills by building projects</h3>
-        <p class="content__description__text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    <section class="qr"> <img class="qr__img" src="images/image-qr-code.png" alt="FrontendMentor QR code">
+      <div class="qr__description">
+        <h1 class="qr__description__header">Improve your front-end skills by building projects</h1>
+        <p class="qr__description__text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
-    </div>
+    </section>
   </body>
 </html>
