Add more semantic tags

--- a/frontendmentor/qr-code-component/index.html
+++ b/frontendmentor/qr-code-component/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontend Mentor | QR code component</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&amp;display=swap">
   </head>
   <body> 
-    <section class="qr"> <img class="qr__img" src="images/image-qr-code.png" alt="FrontendMentor QR code">
-      <div class="qr__description">
-        <h1 class="qr__description__header">Improve your front-end skills by building projects</h1>
-        <p class="qr__description__text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-      </div>
-    </section>
+    <header> </header>
+    <main>
+      <section class="qr"> <img class="qr__img" src="images/image-qr-code.png" alt="FrontendMentor QR code">
+        <div class="qr__description">
+          <h1 class="qr__description__header">Improve your front-end skills by building projects</h1>
+          <p class="qr__description__text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        </div>
+      </section>
+    </main>
+    <footer></footer>
   </body>
 </html>
