--- a/frontendmentor/qr-code-component/index.html
+++ b/frontendmentor/qr-code-component/index.html
@@ -13,8 +13,8 @@
     <main>
       <section class="qr"> <img class="qr__img" src="images/image-qr-code.png" alt="FrontendMentor QR code">
         <div class="qr__description">
-          <h1 class="qr__description__header">Improve your front-end skills by building projects</h1>
-          <p class="qr__description__text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+          <h1 class="qr__description-title">Improve your front-end skills by building projects</h1>
+          <p class="qr__description-description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
       </section>
     </main>
